--- a/Readme
+++ b/Readme
@@ -2,7 +2,7 @@ Le code est pas encore Fini mais vous aurez un avant poste du bot ...
 
 
 
-
+Edit : Le Code Ne Marche Plus.... -Sacharedstone 16:56 20/02/2021
 
 
 
